<?xml version="1.0"?>
<package format="2">
    <name>nturt_gps</name>
    <version>0.0.0</version>
    <description>ROS package for receiving gps signal.</description>
    <maintainer email="kuojack0114@gamil.com">chemmy-jack</maintainer>
    <author email="kuojack0114@gamil.com">chemmy-jack</author>
    <author email="b08901046@ntu.edu.tw">yuhsinchan</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>gps_common</build_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>rospy</build_export_depend>

    <!-- execute dependencies -->
    <exec_depend>gps_common</exec_depend>
    <exec_depend>rospy</exec_depend>
</package>
